syntax = "proto3";

import "google/protobuf/empty.proto";

package car;

option java_multiple_files = true;
option java_package = "org.mycompany.example.car";
option java_outer_classname = "CarProto";

// The car control service definition.
service Car {

    rpc closeWindows(google.protobuf.Empty) returns (stream WindowsStatus) {}

    rpc lockDoors(google.protobuf.Empty) returns (DrsStatus) {}

    rpc switchAlarm(google.protobuf.Empty) returns (AlarmStatus) {}

    rpc carCheck(google.protobuf.Empty) returns (CarStatus) {}

}

message WindowsStatus {
  int32 percentage = 1;
}

message DrsStatus {
    string lock = 1;
}

message AlarmStatus {
    string alarm = 1;
}

message CarStatus {
    repeated Check checks = 1;
}

message Check {
    int32 level = 1;
}